tests/ui/coherence/coherence-overlap-downstream.stderr
error[E0119]: conflicting implementations of trait `Sweet`
  --> $DIR/coherence-overlap-downstream.rs:11:1
   |
LL | impl<T:Sugar> Sweet for T { }
   | ------------------------- first implementation here
LL | impl<T:Fruit> Sweet for T { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
